Fixed css, use to break on build

--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -1,7 +1,7 @@
 // Mixin
 
 @mixin floatingLayerBase {
-    position: absolute;
+    position: absolute !important;
     bottom: 0;
     left: 0;
     height: 100%;
