--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -7,7 +7,7 @@
 .image {
     width: 400px;
     margin: auto;
-    display: block;
+    display: block !important;
 }
 
 .sub {
